--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "git": "^0.1.5",
     "http-errors": "~1.6.3",
     "mongodb": "^3.2.7",
     "morgan": "~1.9.1",
