Fixed the L.routing problem. Added sensor choice and table for studies

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "@turf/line-intersect": "^6.0.2",
     "@turf/turf": "^5.1.6",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "git": "^0.1.5",
+    "grunt": "^1.0.4",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
     "leaflet": "^1.5.1",
