--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "morgan": "~1.9.1",
     "nodemon": "^1.19.1",
     "popper": "^1.0.1",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "qunit": "^2.9.2",
+    "mocha": "^6.1.4"
   }
 }
