--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha ./test/test.js"
   },
   "dependencies": {
     "@turf/line-intersect": "^6.0.2",
     "@turf/turf": "^5.1.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "chai": "^4.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
@@ -20,12 +22,13 @@
     "jquery": "^3.4.1",
     "leaflet": "^1.5.1",
     "leaflet-routing-machine": "^3.2.12",
+    "mocha": "^6.1.4",
     "mongodb": "^3.2.7",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.1",
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
     "qunit": "^2.9.2",
-    "mocha": "^6.1.4"
+    "request": "^2.88.0"
   }
 }
