--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
+    "expect": "^24.8.0",
     "express": "~4.16.1",
     "git": "^0.1.5",
     "grunt": "^1.0.4",
@@ -29,6 +31,10 @@
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
     "qunit": "^2.9.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "should": "^13.2.3",
+    "supertest": "^4.0.2",
+    "util": "^0.12.1",
+    "uuid": "^3.3.2"
   }
 }
